discussion/kv_engine/172258/172258_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor legacy (str.compare() == 0) to just ==

Change-Id: Iccd61bd3742460519fe0aef3afb84c43bc98e28a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-03-15 10:08:16.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-15 10:14:19.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5725/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16009/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/stats.h:488:5: error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"? [clang-diagnostic-error]
    Hdr1sf20MBHistogram itemAllocSizeHisto;
    ^~~~~~~~~~~~~~~~~~~
    Hdr1sfInt32Histogram
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:606:7: note: "Hdr1sfInt32Histogram" declared here
class Hdr1sfInt32Histogram : public HdrHistogram {
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16009/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16009/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44462/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\stats.h(488): error C3646: "itemAllocSizeHisto": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44462/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37424/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37424/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18810/ : FAILURE

Compile error at [2022-03-15T10:10:35.560Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18810/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17778/ : FAILURE

Compile error at [2022-03-15T10:10:16.441Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: ?Hdr1sf20MBHistogram? does not name a type; did you mean ?Hdr1sfInt32Histogram??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17778/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18105/ : FAILURE

Compile error at [2022-03-15T10:12:04.373Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: ?Hdr1sf20MBHistogram? does not name a type; did you mean ?Hdr1sfInt32Histogram??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18105/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5667/ : FAILURE

Compile error at [2022-03-15T10:10:47.946Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5667/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16848/ : FAILURE

Compile error at [2022-03-15T10:10:38.768Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16848/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26185/ : FAILURE

Compile error at [2022-03-15T10:13:16.456Z] ../kv_engine/engines/ep/src/stats.h:488:5:
error: unknown type name "Hdr1sf20MBHistogram"; did you mean "Hdr1sfInt32Histogram"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26185/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14930/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-15 11:14:56.000000000
Message: 
Patch Set 1: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44466/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [32/159]: test datatype...(98 ms) OK


99% tests passed, 2 tests failed out of 425

Total Test time (real) = 693.60 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44466/ )

Timeout of a CTest test 424/425 Test #287: ep_testsuite_basic.ephemeral.comp_active ......................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44466/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5728/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16013/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37428/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14933/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18813/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17781/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18108/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5670/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16851/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26188/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
